[package]
name = "tokio-smoltcp"
version = "0.4.1"
authors = ["spacemeowx2 <spacemeowx2@gmail.com>"]
edition = "2018"
description = "An asynchronous wrapper for smoltcp."
documentation = "https://docs.rs/tokio-smoltcp/"
homepage = "https://github.com/spacemeowx2/tokio-smoltcp"
repository = "https://github.com/spacemeowx2/tokio-smoltcp.git"
keywords = ["async", "smoltcp", "tokio"]
categories = ["asynchronous", "network-programming"]
license = "MIT OR Apache-2.0"

[dependencies]
futures = "0.3"
pin-project-lite = "0.2.6"
tokio = { version = "1.6.1", features = ["time", "rt"] }
tokio-util = "0.7.4"
parking_lot = "0.12.0"
smoltcp = { workspace = true }


